--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   app:
-    image: fazalfarhan01/earnapp-earning-monitor
+    image: fazalfarhan01/earnapp-earning-monitor:lockblock-latest
     restart: always
     environment:
       AUTH: afbdsafdbaedgtfn
