--- a/.github/workflows/publish_to_docker_hub.yml
+++ b/.github/workflows/publish_to_docker_hub.yml
@@ -30,4 +30,5 @@ jobs:
         run: |
           docker buildx build --push \
           -t fazalfarhan01/earnapp-earning-monitor:lockblock-latest \
+          -t fazalfarhan01/earnapp-earning-monitor:javascript-latest \
           --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 .
