--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -1,10 +1,10 @@
 version: "3.3"
 services:
-  app:
-    image: fazalfarhan01/earnapp-earning-monitor:lockblock-latest
-    restart: always
-    environment:
-      AUTH: afbdsafdbaedgtfn
-      WEBHOOK_URL: https://example.com/somthing_to_do_with_you
-      MODE: both # Defaults to all when nothing specified
-      # takes total / perDevice / transactions / all as option
+    app:
+        image: fazalfarhan01/earnapp-earning-monitor:lockblock-latest
+        restart: always
+        environment:
+            AUTH: afbdsafdbaedgtfn
+            WEBHOOK_URL: https://example.com/somthing_to_do_with_you
+            MODE: all # Defaults to all when nothing specified
+            # takes total / perDevice / transactions / all as option
