--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -7,5 +7,5 @@ services:
             AUTH: afbdsafdbaedgtfn
             WEBHOOK_URL: https://example.com/somthing_to_do_with_you
             MODE: all # Defaults to all when nothing specified
-            # takes total / perDevice / transactions / all as option
+            # takes total / perDevice / referrals / transactions / all as option
             DELAY: 40
